add compiler options